[package]
name = "futures-diagnose"
version = "1.0.1"
license = "MIT"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
edition = "2018"
description = "Wraps around a Spawn and provides lots of diagnostics"

[dependencies]
futures01 = { package = "futures", version = "0.1" }
futures = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.8"
parking_lot = "0.9.0"
pin-project = "0.4.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
